Bug 237177 - Print functionality does not display any 'Print' dialogue
Summary: Print functionality does not display any 'Print' dialogue
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-10 23:46 UTC by Sabine Faure
Modified: 2010-07-27 17:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-10 23:46:06 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kmail
- Click on 'New' button
- Enter a recipient, a subject and a few words
- Go to Message menu/Print...

Nothing happens whereas a 'Print' dialogue should appear.

Note: using the shortcut (Ctrl+P) does not work either.

Trunk, Svn Rev 1125123
Comment 1 Thomas McGuire 2010-05-11 01:56:27 UTC
SVN commit 1125218 by tmcguire:

Port printing function in composer.

BUG: 237177

 M  +19 -20    kmcomposewin.cpp  
 M  +1 -5      kmcomposewin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125218
Comment 2 Thomas McGuire 2010-05-11 01:58:09 UTC
Ok, printing should work now, with one exception: The To/CC/From addresses don't get printed.
I suspect that is the same bug as the other ones about those addresses getting lost, so don't report this until the other bugs are fixed, please.
Comment 3 Sabine Faure 2010-05-11 18:41:26 UTC
It is partially corrected now.

The 'print' dialogue appears and a .pdf can be saved on the HD but when opening the file the 'to:' and 'From:' information is not there.

So I am not verifying this bug yet. I will retest it later.

Trunk, Svn Rev 1125510
Comment 4 Thomas McGuire 2010-05-12 16:53:43 UTC
SVN commit 1125866 by tmcguire:

Don't use the expanded addresses when printing.

Before, the recipients in the printout were empty, since they were not
expanded. Now, simply don't expand them, so we get a correct printout.

Currently, this will not work if the recipients are a distlist or a
nickname, as KMime discards those. This needs a change in KMime
(which would also get rid of the ugly X-KMail header for the dist lists
 we currently have for drafts)

BUG: 237177

 M  +26 -17    kmcomposewin.cpp  
 M  +4 -1      kmcomposewin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125866
Comment 5 Sabine Faure 2010-05-13 00:00:48 UTC
It is partially corrected now.

The From and to email addresses are displayed when printing.
However if the recipient(s) is a distribution list then nothing is printed as a to.
I'll retest this when this is fixed.

Trunk, Svn Rev 1125914
Comment 6 Sabine Faure 2010-07-08 21:24:07 UTC
I retested this today and the From: is not displayed anymore even when it is just one recipient so I am reopening this bug.

Trunk, Svn Rev 1147490
Comment 7 Leo Franchi 2010-07-27 17:54:32 UTC
SVN commit 1155558 by lfranchi:

Set contents of composer window when creating a simple composer as well.

BUG: 237177


 M  +8 -0      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1155558