Port printing function in composer.

BUG: 237177

svn path=/trunk/KDE/kdepim/kmail/; revision=1125218